# budget-sekolah-mcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.test  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements-test.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml  test.yml
src/budget_sekolah_mcp/: __init__.py  __main__.py  asgi.py  auth.py  auth_provider.py  client.py  config.py  middleware.py  server.py
src/budget_sekolah_mcp/tools/: __init__.py  assumptions.py  budget_entries.py  categories.py  contributions.py  depreciation.py  grade_configs.py  income_entries.py  investments.py  organizations.py  parent_expense_allocations.py  simulation.py  subsidies.py
tests/: conftest.py  test_assumptions.py  test_budget_entries.py  test_categories.py  test_contributions.py  test_depreciation.py  test_grade_configs.py  test_income_entries.py  test_investments.py  test_middleware.py  test_organizations.py  test_parent_expense_allocations.py  test_server_auth.py  test_simulation.py  test_subsidies.py
